basic security with in-memory users ready